[tool.poetry]
name = "langgraph-tutorial"
version = "0.1.0"
description = ""
authors = ["Sreekar <sreekargv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.6.5"
langchain = "^0.3.27"
langchain-openai = "^0.3.30"
dotenv = "^0.9.9"
ipykernel = "^6.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
